--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -31,7 +31,7 @@ input {
 }
 
 body {
-  background: #fff;
+  background: #333333;
 }
 
 .preloader {
@@ -41,7 +41,7 @@ body {
   right: 0;
   bottom: 0;
   overflow: hidden;
-  background: #2196f3;
+  background: #272727;
   z-index: 1001;
 }
 
@@ -86,7 +86,7 @@ body {
   z-index: 5;
   -webkit-box-shadow: 0px 4px 4px #0000003d;
           box-shadow: 0px 4px 4px #0000003d;
-  background: #2196f3;
+  background: #272727;
   height: 65px;
   padding: 0 25px;
   display: -webkit-box;
@@ -124,7 +124,7 @@ body {
 }
 
 .header-logo__container:last-child {
-  color: #2196f3;
+  color: #272727;
   background: #fff;
 }
 
@@ -186,7 +186,7 @@ body {
   z-index: 0;
   width: 100%;
   height: 100%;
-  background: #2f80ed;
+  background: #2196f3;
 }
 
 .header-nav__container-card {
@@ -240,7 +240,7 @@ body {
 }
 
 .header-container__btn {
-  background: #f2f9fe;
+  background: #2196f3;
   font-weight: 500;
   height: 35px;
   font-size: 14px;
@@ -258,7 +258,7 @@ body {
   text-align: center;
   letter-spacing: 1.25px;
   text-transform: uppercase;
-  color: #2196f3;
+  color: #fff;
   -webkit-box-shadow: 0px 3px 5px #00000033, 0px 1px 18px #0000001f, 0px 6px 10px #00000024;
           box-shadow: 0px 3px 5px #00000033, 0px 1px 18px #0000001f, 0px 6px 10px #00000024;
   border-radius: 4px;
@@ -291,7 +291,7 @@ body {
 
 .game {
   margin: 35px 0 125px;
-  background: #0000000d;
+  background: #272727;
   border-radius: 5px;
   width: 70%;
   display: -webkit-box;
@@ -310,7 +310,7 @@ body {
 .game-time {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
-  background: #fff;
+  background: #333333;
   width: 255px;
   height: 65px;
   font-weight: 500;
@@ -327,7 +327,7 @@ body {
           justify-content: center;
   text-align: center;
   letter-spacing: 0.15px;
-  color: #00000066;
+  color: #fff;
 }
 
 .game-field {
@@ -431,7 +431,7 @@ body {
 
 .about {
   margin: 35px 0 125px;
-  background: #0000000d;
+  background: #272727;
   border-radius: 5px;
   width: 70%;
   -webkit-box-align: center;
@@ -452,7 +452,7 @@ body {
   font-weight: 500;
   font-size: 1.66rem;
   letter-spacing: 0.15px;
-  color: #000000de;
+  color: #fff;
 }
 
 .about-container {
@@ -473,11 +473,11 @@ body {
   padding: 15px;
   width: 80%;
   height: 100%;
-  background-color: #fff;
+  background-color: #333333;
 }
 
 .about-container__number {
-  background-color: #2196f3;
+  background-color: #272727;
   min-width: 40px;
   height: 40px;
   border-radius: 100px;
@@ -497,11 +497,10 @@ body {
 }
 
 .about-container__text {
-  font-size: 1.2rem;
-  font-weight: 500;
+  font-size: 1.4rem;
   line-height: 20px;
   letter-spacing: 0.25px;
-  color: #00000099;
+  color: #fff;
 }
 
 .about-img {
@@ -532,7 +531,7 @@ body {
 
 .score {
   margin: 35px 0 125px;
-  background: #0000000d;
+  background: #272727;
   border-radius: 5px;
   width: 70%;
   display: -webkit-box;
@@ -551,7 +550,7 @@ body {
   font-weight: 500;
   font-size: 1.66rem;
   letter-spacing: 0.15px;
-  color: #000000de;
+  color: #fff;
 }
 
 .score-container {
@@ -571,7 +570,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  border-bottom: #21212114 1px solid;
+  border-bottom: #b8b8b8 1px solid;
   -webkit-column-gap: 15px;
           column-gap: 15px;
   position: relative;
@@ -595,7 +594,7 @@ body {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.15px;
-  color: #000000de;
+  color: #fff;
 }
 
 .score-card__span {
@@ -615,14 +614,14 @@ body {
   font-size: 1.25rem;
   line-height: 21px;
   letter-spacing: 0.1px;
-  color: #333333;
+  color: #fff;
 }
 
 .score-card__mail {
   font-size: 1rem;
   line-height: 15px;
   letter-spacing: 0.4px;
-  color: #333333;
+  color: #b8b8b8;
 }
 
 .score-card__avatar {
@@ -636,7 +635,7 @@ body {
 
 .settings {
   margin: 35px 0 125px;
-  background: #fff;
+  background: #272727;
   border-radius: 5px;
   width: 70%;
   display: -ms-grid;
@@ -659,21 +658,19 @@ body {
   font-weight: 500;
   font-size: 1.8rem;
   letter-spacing: 0.15px;
-  color: rgba(0, 0, 0, 0.87);
+  color: #fff;
 }
 
 .settings-container__text {
   letter-spacing: 0.25px;
-  color: #00000099;
-  font-weight: 500;
+  color: #b8b8b8;
 }
 
 .settings-container__btn {
-  border: 1px solid #6e6969;
-  color: #312f2f;
-  font-weight: 500;
+  border: 1px solid #ffffff;
+  color: #fff;
   outline: none;
-  border-radius: 2px;
+  border-radius: 3px;
   width: max-content15px;
   background: #fff;
   height: 25px;
