--- a/styles/modals/style.scss
+++ b/styles/modals/style.scss
@@ -1,5 +1,6 @@
-$primary: #2196f3;
+$primary: #272727;
 $secondary: #ffffff;
+$teritary: #2196f3;
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 
@@ -43,11 +44,12 @@ input {
     top: 50%;
     transform: translate(-50%, -50%);
     margin-top: 150%;
-    background: $secondary;
+    background: $primary;
     display: grid;
+    border-radius: 15px;
+    border: 4px solid #2196f399;
     grid-template-rows: repeat(2, auto);
     box-shadow: 0px 1px 5px #00000033, 0px 3px 4px #0000001f, 0px 2px 4px #00000024;
-    border-radius: 10px;
     @include modalsTrans();
     &-visible {
         visibility: visible;
@@ -62,10 +64,11 @@ input {
             font-weight: 500;
             font-size: 20px;
             letter-spacing: 0.15px;
+            color: $secondary;
         }
     }
     &-body {
-        background: #fafafa;
+        background: $primary;
         padding: 30px 20px 0;
         display: grid;
         grid-template-columns: auto max-content;
@@ -84,16 +87,16 @@ input {
         grid-template-rows: repeat(2, auto);
         border-radius: 4px 4px 0px 0px;
         border-bottom: 1px solid #000000d7;
-        background: #21212114;
+        background: $secondary;
         align-items: center;
-        padding: 0 10px 0 50px;
+        padding: 0 10px 0 25px;
         &__title {
-            font-size: 12px;
+            font-size: 15px;
             margin-top: 8px;
-            font-weight: 500;
             letter-spacing: 0.4px;
-            color: #00000061;
+            color: $primary;
             grid-row: 1 / 2;
+            font-weight: 500;
             grid-column: 1 / 2;
         }
         &__input {
@@ -102,8 +105,8 @@ input {
             height: 30px;
             background: none;
             letter-spacing: 0.15px;
-            color: #000000de;
-            font-size: 16px;
+            color: $teritary;
+            font-size: 15px;
             font-weight: 500;
         }
         &__icon {
@@ -173,7 +176,7 @@ input {
         align-items: center;
         column-gap: 17px;
         border-radius: 0 0 10px 10px;
-        background: #fafafa;
+        background: $primary;
         &__btn {
             box-shadow: 0px 0px 2px #0000001f, 0px 2px 2px #0000003d;
             border-radius: 5px;
@@ -187,13 +190,22 @@ input {
             font-weight: 500;
             width: 108px;
             height: 36px;
+            @include slowTrans();
             &:first-child {
-                background: $primary;
-                color: $secondary;
+                background: $secondary;
+                color: $primary;
+                border: 1px solid $primary;
+                &:hover {
+                    background-color: #b8b8b8;
+                }
             }
             &:last-child {
-                background: #e3f2fd;
-                color: $primary;
+                background: $teritary;
+                color: $secondary;
+                border: 1px solid $primary;
+                &:hover {
+                    background-color: #056fc7;
+                }
             }
         }
     }
@@ -202,7 +214,7 @@ input {
 .substrate {
     position: fixed;
     z-index: 10;
-    background: #00000040;
+    background: #0000007c;
     width: 100%;
     height: 100%;
     @include modalsTrans();
@@ -219,8 +231,8 @@ input {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    max-width: 360px;
-    min-height: 250px;
+    max-width: 380px;
+    min-height: 240px;
     padding: 20px 30px;
     visibility: hidden;
     position: fixed;
@@ -230,6 +242,9 @@ input {
     top: 50%;
     transform: translate(-50%, -50%);
     margin-top: 150%;
+    background-color: $primary;
+    border-radius: 15px;
+    border: 4px solid #2196f399;
     @include modalsTrans();
     &-visible {
         visibility: visible;
@@ -239,7 +254,7 @@ input {
         font-family: Roboto;
         font-size: 26px;
         letter-spacing: 0.25px;
-        color: $primary;
+        color: $teritary;
         font-weight: 700;
         text-align: center;
     }
@@ -251,24 +266,27 @@ input {
     &-text {
         text-align: center;
         font-family: Roboto;
-        font-size: 14px;
+        font-size: 17px;
         line-height: 20px;
         letter-spacing: 0.25px;
-        color: #00000099;
+        color: $secondary;
         font-weight: 500;
+        &2 {
+            font-size: 14px;
+            font-weight: 400;
+        }
         &__span {
             font-family: Roboto;
-            font-size: 14px;
+            font-size: 16px;
             line-height: 20px;
             letter-spacing: 0.25px;
-            color: #00000099;
+            color: $secondary;
             font-weight: 500;
         }
     }
     &-btn {
         width: 100px;
         height: 36px;
-        background: $primary;
         box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
         border-radius: 4px;
         text-align: center;
@@ -281,14 +299,15 @@ input {
             color: $primary;
             border: 1px solid $primary;
             &:hover {
-                background-color: #e3f2fd;
+                background-color: #b8b8b8;
             }
         }
         &:last-child {
-            background: $primary;
+            background: $teritary;
             color: $secondary;
+            border: 1px solid $primary;
             &:hover {
-                background-color: #0465b4;
+                background-color: #056fc7;
             }
         }
     }
@@ -305,8 +324,10 @@ input {
     visibility: hidden;
     position: fixed;
     left: 50%;
-    background-color: $secondary;
+    background-color: $primary;
     z-index: 11;
+    border-radius: 15px;
+    border: 4px solid #2196f399;
     top: 30%;
     transform: translate(-50%, -50%);
     margin-bottom: 150%;
@@ -317,10 +338,10 @@ input {
     }
     &-text {
         font-family: Roboto;
-        font-size: 14px;
+        font-size: 17px;
         line-height: 20px;
         letter-spacing: 0.25px;
-        color: #00000099;
+        color: $secondary;
         font-weight: 500;
     }
     &-container {
@@ -347,14 +368,15 @@ input {
             color: $primary;
             border: 1px solid $primary;
             &:hover {
-                background-color: #e3f2fd;
+                background-color: #b8b8b8;
             }
         }
         &:last-child {
-            background: $primary;
+            background: $teritary;
             color: $secondary;
+            border: 1px solid $primary;
             &:hover {
-                background-color: #0465b4;
+                background-color: #056fc7;
             }
         }
     }
