--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -1,6 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 html {
-  font-size: 12px;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -8,6 +7,7 @@ html {
 }
 
 * {
+  font-size: 12px;
   margin: 0;
   font-weight: normal;
   text-decoration: none;
@@ -133,7 +133,7 @@ body {
   letter-spacing: 1.25px;
   text-transform: uppercase;
   font-weight: 500;
-  font-size: 11px;
+  font-size: 0.91rem;
 }
 
 .header-nav {
@@ -206,7 +206,7 @@ body {
 }
 
 .header-nav__container-text {
-  font-size: 12px;
+  font-size: 1rem;
   z-index: 1;
   text-align: center;
   color: #fff;
@@ -243,7 +243,7 @@ body {
   background: #2196f3;
   font-weight: 500;
   height: 35px;
-  font-size: 14px;
+  font-size: 1.16rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -262,7 +262,7 @@ body {
   -webkit-box-shadow: 0px 3px 5px #00000033, 0px 1px 18px #0000001f, 0px 6px 10px #00000024;
           box-shadow: 0px 3px 5px #00000033, 0px 1px 18px #0000001f, 0px 6px 10px #00000024;
   border-radius: 4px;
-  min-width: 130px;
+  width: 130px;
 }
 
 .header-container__start-btn {
@@ -271,6 +271,7 @@ body {
 
 .header-container__start-btn span {
   font-weight: 500;
+  font-size: 1.16rem;
 }
 
 .header-container__register-btn {
@@ -313,9 +314,7 @@ body {
   background: #333333;
   width: 255px;
   height: 65px;
-  font-weight: 500;
   margin: 30px 0 60px;
-  font-size: 36px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -325,7 +324,12 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.game-time__item {
   text-align: center;
+  font-weight: 500;
+  font-size: 3rem;
   letter-spacing: 0.15px;
   color: #fff;
 }
@@ -591,7 +595,7 @@ body {
           transform: translate(0, -50%);
   right: 20px;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 1.16rem;
   line-height: 24px;
   letter-spacing: 0.15px;
   color: #fff;
@@ -599,7 +603,7 @@ body {
 
 .score-card__span {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 1.16rem;
   line-height: 24px;
   letter-spacing: 0.15px;
   color: #2196f3;
